
syntax = "proto3";

package datadog.config;

option go_package = "pkg/proto/pbgo"; // golang

message RemoteConfigKey {
    string app_key = 1;
    int64  org_id = 2;
    string datacenter = 3;
}
