syntax = "proto3";

package datadog.process;

option go_package = "pkg/proto/pbgo"; // golang

message WorkloadMetaProcessEvents {
  repeated ProcessEventSet setEvents = 1;
  repeated ProcessEventUnset unsetEvents = 2;
}

message ProcessEventSet {
  int32 pid = 1;
  int32 nspid = 2;
  string containerId = 3;
  int64 creationTime = 4;
  Language language = 5;
}

message ProcessEventUnset {
  int32 pid = 1;
}

message Language {
  string name = 1;
}

service ProcessEntityStream {
  rpc StreamEntities (ProcessStreamEntitiesReq) returns (stream WorkloadMetaProcessEvents);
}

message ProcessStreamEntitiesReq {}
